# kill-switch

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/logging/: mod.rs
src/verification/: mod.rs
src/wiping/: mod.rs
